<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ShapeX Calculator</string>

    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="random">Random</string>
    <string name="reset">Reset</string>

    <string name="calculate_text">Calculate:</string>

    <string name="nan">NaN</string>

    <string name="decimal_points">Number of Decimal Points</string>
    <string name="decimal_points_text">Number of Decimal Places:</string>

    <string name="pi_precision">Precision of PI</string>
    <string name="pi_precision_text">Precision of PI:</string>

    <string name="answer"> Answer </string>
    <string name="answer_">Answer: </string>

    <string name="show_working">Show Working</string>

    <string name="not_enough_parameters">Not Enough Parameters</string>

    <string name="circle">Circle</string>
    <string name="rectangle">Rectangle</string>
    <string name="square">Square</string>
    <string name="triangle">Triangle</string>

    <string name="equilateral_triangle">Equilateral Triangle</string>
    <string name="isosceles_triangle">Isosceles Triangle</string>
    <string name="scalene_triangle">Scalene  Triangle</string>

    <string name="length">Length</string>
    <string name="length_l">Length (l)</string>

    <string name="width">Width</string>
    <string name="width_w">Width (w)</string>

    <string name="sideLength">Side Length</string>
    <string name="sideLength_l">Side Length (l)</string>

    <string name="diagonal">Diagonal</string>
    <string name="diagonal_d">Diagonal (d)</string>

    <string name="perimeter">Perimeter</string>
    <string name="perimeter_p">Perimeter (P)</string>

    <string name="area">Area</string>
    <string name="area_a">Area (A)</string>

    <string name="height">Height</string>
    <string name="height_h">Height (h)</string>

    <string name="angle">Angle</string>

    <string name="angle_a">Angle a</string>
    <string name="angle_a_a">Angle a (a°)</string>

    <string name="angle_b">Angle b</string>
    <string name="angle_b_b">Angle b (b°)</string>

    <string name="angle_x">Angle x</string>
    <string name="angle_x_x">Angle x (x°)</string>

    <string name="angle_y">Angle y</string>
    <string name="angle_y_y">Angle y (y°)</string>

    <string name="radius">Radius</string>
    <string name="radius_r">Radius (r)</string>

    <string name="diameter">Diameter</string>
    <string name="diameter_d">Diameter (d)</string>

    <string name="circumference">Circumference</string>
    <string name="circumference_c" tools:ignore="TypographyOther">Circumference (C)</string>

    <string name="base">Base</string>
    <string name="base_b">Base (b)</string>


    <string name="pi">π =</string>


    <string name="square_formulae_side_length">
        <b><u>Side Length Formulae:</u></b>
        \n Side Length = Diagonal / √2
        \n Side Length = Perimeter / l²
        \n Side Length = √Area
    </string>

    <string name="square_formulae_diagonal">
        <b><u>Diagonal Formulae:</u></b>
        \n Diagonal = √2 × Side Length
        \n Diagonal = (√2 × Perimeter) / 4
        \n Diagonal = √(2 × Area)
    </string>

    <string name="square_formulae_perimeter">
        <b><u>Perimeter Formulae:</u></b>
        \n Perimeter = Side Length × 4
        \n Perimeter = (4 × Diagonal) / √2
        \n Perimeter = 4 × √Area
    </string>


    <string name="square_formulae_area">
        <b><u>Area Formulae:</u></b>
        \n Area = Side Length²
        \n Area = Diagonal² / 2
        \n Area = Perimeter² / 16
    </string>


    <string name="circle_formulae_radius">
        <b><u>Radius Formulae:</u></b>
        \n Radius = Diameter / 2
        \n Radius = Circumference / 2 × π
        \n Radius = √(Area / π)
    </string>

    <string name="circle_formulae_diameter">
        <b><u>Diameter Formulae:</u></b>
        \n Diameter = Radius × 2
        \n Diameter = Circumference / π
        \n Diameter = 2 × √(Area / π)
    </string>

    <string name="circle_formulae_circumference">
        <b><u>Circumference Formulae:</u></b>
        \n Circumference = 2 × π × Radius
        \n Circumference = π × Diameter
        \n Circumference = 2 × √(Area × π)
    </string>

    <string name="circle_formulae_area">
        <b><u>Area Formulae:</u></b>
        \n Area = π × Radius²
        \n Area = (π × Diameter²) / 4
        \n Area = Circumference² / (4 × π)
    </string>


    <string name="rectangle_formulae_length">
        <b><u>Length Formulae:</u></b>
        \n Length = √(Diagonal² - Width²)
        \n Length = (Perimeter - 2 × Width) / 2
        \n Length = Area / Width
        \n Length = (Perimeter / 4) + (1 / 4) × √(8 × Diagonal² - Perimeter²)
        \n Length = {√2 × Diagonal² × √[Diagonal² - √(Diagonal<sup><font size="9">4</font></sup> - 4 × Area²)] + √2 × √(Diagonal<sup><font size="9">4</font></sup> - 4 × Area²) × √[Diagonal² - √(Diagonal<sup><font size="9">4</font></sup> - 4 × Area²)]} / (4 × Area)
        \n Length = [(Perimeter / 2) + √(Perimeter² / 4 - 4 × Area)] / 2
    </string>

    <string name="rectangle_formulae_width">
        <b><u>Width Formulae:</u></b>
        \n Width = √(Diagonal² - Length²)
        \n Width = (Perimeter - 2 × Length) / 2
        \n Width = Area / Length
        \n Width = (Perimeter / 4) - (1 / 4) × √(8 × Diagonal² - Perimeter²)
        \n Width = {√2 × Diagonal² × √[Diagonal² + √(Diagonal<sup><font size="9">4</font></sup> + 4 × Area²)] - √2 × √(Diagonal<sup><font size="9">4</font></sup> - 4 × Area²) × √[Diagonal² + √(Diagonal<sup><font size="9">4</font></sup> + 4 × Area²)]} / (4 × Area)
        \n Width = [(Perimeter / 2) - √(Perimeter² / 4 - 4 × Area)] / 2
    </string>

    <string name="rectangle_formulae_diagonal">
        <b><u>Diagonal Formulae:</u></b>
        \n Diagonal = √(Length² + Width²)
        \n Diagonal = √[Length² + (Perimeter / 2 - Length)²]
        \n Diagonal = √[Length² + (Area / Length)²]
        \n Diagonal = √[Width² + (Perimeter / 2 - Width)²]
        \n Diagonal = √[Width² + (Area / Width)²]
        \n Diagonal = (1 / 2) × √(Perimeter² - 8 × Area)
    </string>


    <string name="rectangle_formulae_perimeter">
        <b><u>Perimeter Formulae:</u></b>
        \n Perimeter = 2 × (Length + Width)
        \n Perimeter = 2 × Length + 2 × √(Diagonal² - Length²)
        \n Perimeter = 2 × Length + 2 × (Area / Length)
        \n Perimeter = 2 × Width + 2 × √(Diagonal² - Width²)
        \n Perimeter = 2 × Width + 2 × (Area / Width)
        \n Perimeter = {√[2 × Diagonal² + 2 × √(Diagonal<sup><font size="9">4</font></sup> - 4 × Area²)]} × {[(1 / 2) × Diagonal² + Area - (1 / 2) × √(Diagonal<sup><font size="9">4</font></sup> - 4 × Area²)] / Area}
    </string>

    <string name="rectangle_formulae_area">
        <b><u>Area Formulae:</u></b>
        \n Area = Length × Width
        \n Area = Length × √(Diagonal² - Length²)
        \n Area = Perimeter × (1 / 2) - Length²
        \n Area = Width × √(Diagonal² - Width²)
        \n Area = Perimeter × (1 / 2) - Width²
        \n Area = [(Perimeter / 4) - (1 / 4) × √(8 × Diagonal² - Perimeter²)] × [(Perimeter / 4) + (1 / 4) × √(8 × Diagonal² - Perimeter²)]
    </string>


    <string name="equilateral_triangle_formulae_side_length">
        <b><u>Side Length Formulae:</u></b>
        \n Side Length = (2 × Height) / √3
        \n Side Length = Perimeter / 3
        \n Side Length = √[(4 × Area) / √3]
    </string>

    <string name="equilateral_triangle_formulae_height">
        <b><u>Height Formulae:</u></b>
        \n Height = (Side Length × √3) / 2
        \n Height = [(Perimeter / 3) × √3] / 2
        \n Height = {√[(4 × Area) / √3] × √3} / 2
    </string>


    <string name="equilateral_triangle_formulae_perimeter">
        <b><u>Perimeter Formulae:</u></b>
        \n Perimeter = 3 × Side Length
        \n Perimeter = 3 × [(2 × Height) / √3]
        \n Perimeter = 3 × √[(4 × Area) / √3]
    </string>

    <string name="equilateral_triangle_formulae_area">
        <b><u>Area Formulae:</u></b>
        \n Area = (√3 / 4) × Side Length²
        \n Area = (√3 / 4) × [(2 × Height) / √3]²
        \n Area = (√3 / 4) × (Perimeter / 3)²
    </string>


    <string name="isosceles_triangle_formulae_side_length">
        <b><u>Side Length Formulae:</u></b>
        \n Side Length = (1 / 2) × √(Base² + 4 × Height²)
        \n Side Length = (Perimeter - Base) / 2
        \n Side Length = √[(16 × Area² + Base<sup><font size="9">4</font></sup>) / (4 × Base²)]
        \n Side Length = (4 × Height² + Perimeter²) / (4 × Perimeter)
        \n Side Length = √(Area² / Height² + Height²)
    </string>

    <string name="isosceles_triangle_formulae_base">
        <b><u>Base Formulae:</u></b>
        \n Base = 2 × √(Side Length² - Height²)
        \n Base = Perimeter - 2 × Side Length
        \n Base = 2 × Area / Height
        \n Base = (Perimeter / 2) - 2 × (Height² / Perimeter)
    </string>

    <string name="isosceles_triangle_formulae_height">
        <b><u>Height Formulae:</u></b>
        \n Height = √[Side Length² - (Base² / 4)]
        \n Height = √{Side Length² - [(Perimeter - 2 × Side Length)² / 4]}
        \n Height = 2 × Area / Base
        \n Height = (1 / 2) × √[Perimeter × (Perimeter - 2 × Base)]
    </string>


    <string name="isosceles_triangle_formulae_perimeter">
        <b><u>Perimeter Formulae:</u></b>
        \n Perimeter = 2 × Side Length + Base
        \n Perimeter = 2 × Side Length + 2 × √(Side Length² - Height²)
        \n Perimeter = 2 × √[(4 × Height² + Base²) / 4] + Base
        \n Perimeter = √[(16 × Area² + Base<sup><font size="9">4</font></sup>) / Base²] + Base
        \n Perimeter = 2 × √[Height² + (Area / Height)²] + [2 × (Area / Height)]
    </string>

    <string name="isosceles_triangle_formulae_area">
        <b><u>Area Formulae:</u></b>
        \n Area = {Base × √[Side Length² - (Base² / 4)]} / 2
        \n Area = (Perimeter × Height) / 4 - (Height³ / Perimeter)
        \n Area = Height × √(Side Length² - Height²)
        \n Area = (Base × Height) / 2
        \n Area = (1 / 4) × Base × √[Perimeter × (Perimeter - 2 × Base)]
    </string>


    <string-array name="square">
        <item> Side Length (l) </item>
        <item> Diagonal (d) </item>
        <item> Perimeter (P) </item>
        <item> Area (A) </item>
    </string-array>

    <string-array name="circle">
        <item> Radius (r) </item>
        <item> Diameter (d) </item>
        <item tools:ignore="TypographyOther"> Circumference (C) </item>
        <item> Area (A) </item>
    </string-array>

    <string-array name="rectangle">
        <item> Length (l) </item>
        <item> Width (w) </item>
        <item> Diagonal (d) </item>
        <item> Perimeter (P) </item>
        <item> Area (A) </item>
    </string-array>

    <string-array name="equilateral_triangle">
        <item> Side Length (l) </item>
        <item> Height (h) </item>
        <item> Perimeter (P) </item>
        <item> Area (A) </item>
    </string-array>

    <string-array name="isosceles_triangle">
        <item> Side Length (l) </item>
        <item> Base (b) </item>
        <item> Height (h) </item>
        <item> Perimeter (P) </item>
        <item> Area (A) </item>
    </string-array>

</resources>
